--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Deploy to GitHub Pages
 
 on:
   push:
-    branches: ["main"] # Falls dein Branch "master" heißt, hier ändern
+    branches: ["main"]
 
 permissions:
   contents: read
@@ -17,7 +17,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install Node.js
-        uses: actions/checkout@v4
+        uses: actions/setup-node@v4 # Das ist die wichtige Änderung!
         with:
           node-version: 20
 
@@ -25,12 +25,12 @@ jobs:
         run: npm install
 
       - name: Build
-        run: npm run build # Dies erstellt den 'dist' Ordner
+        run: npm run build
 
       - name: Upload Artifacts
         uses: actions/upload-pages-artifact@v3
         with:
-          path: "./dist" # Hier liegt das Ergebnis nach dem Build
+          path: "./dist"
 
   deploy:
     needs: build_site
