--- a/package.json
+++ b/package.json
@@ -1,25 +1,15 @@
+
 {
-  "name": "tekko-raumregelung",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "name": "tekko-room-control",
+  "version": "1.0.0",
+  "description": "All-in-one Gekko Control",
+  "main": "server.js",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "start": "node server.js"
   },
   "dependencies": {
-    "react": "^19.2.3",
-    "react-dom": "^19.2.3",
-    "lucide-react": "0.460.0",
-    "qrcode.react": "3.1.0",
-    "jszip": "3.10.1",
-    "file-saver": "2.0.5"
-  },
-  "devDependencies": {
-    "@types/node": "^22.14.0",
-    "@vitejs/plugin-react": "^5.0.0",
-    "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "express": "^4.18.2",
+    "http-proxy-middleware": "^2.0.6",
+    "cors": "^2.8.5"
   }
 }
