--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 {
   "name": "tekko-room-control",
   "version": "1.0.0",
-  "description": "All-in-one Gekko Control",
+  "description": "All-in-one Gekko Control with on-the-fly transpilation",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
@@ -10,6 +10,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "http-proxy-middleware": "^2.0.6",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "esbuild": "^0.20.0"
   }
 }
