--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
+
 {
   "name": "tekko-room-control",
   "version": "1.0.0",
-  "description": "All-in-one Gekko Control with on-the-fly transpilation",
+  "description": "All-in-one Gekko Control with Firestore Persistence",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
@@ -9,6 +10,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "cors": "^2.8.5",
-    "esbuild": "^0.20.0"
+    "esbuild": "^0.20.0",
+    "firebase-admin": "^12.0.0"
   }
 }
