feat: Improve gekkoService and AdminPanel stability
Refactors the gekkoService to better handle configuration updates and connection testing. Enhances the AdminPanel to synchronize its UI state with the service's internal configuration, providing a live preview. Updates server-side configuration loading and error handling for increased robustness. Improves connection test messages and room discovery logging for clearer user feedback.

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,3 +1,4 @@
+
 node_modules
 npm-debug.log
 .git
@@ -6,6 +7,7 @@ npm-debug.log
 config.json
 Dockerfile
 dockerfile.txt
+procfile.txt
 .dockerignore
 dist
 *.md
